--- a/src/pages/brevkasse.astro
+++ b/src/pages/brevkasse.astro
@@ -36,6 +36,7 @@ import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
       <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
       <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
     </div>
+    <div class="margintop"><Button text="Læs flere"></Button></div>
   </div>
 </GirlsUniLayout>
 
@@ -67,6 +68,10 @@ import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
     flex-direction: column;
     margin-top: var(--spacing-small);
     margin-bottom: var(--spacing-small);
+  }
+
+  .margintop {
+    margin-top: var(--spacing-small);
   }
 
   @media only screen and (min-width: 600px) {
