--- a/src/pages/foraeldre.astro
+++ b/src/pages/foraeldre.astro
@@ -2,6 +2,8 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import BoxColorButton from "../components/ui/BoxColorButton.astro";
 import Button from "../components/ui/Button.astro";
+import SearchBar from "../components/ui/SearchBar.astro";
+import BrevkasseCard from "../components/cards/BrevkasseCard.astro";
 ---
 
 <BaseLayout title="Parents">
@@ -53,21 +55,59 @@ import Button from "../components/ui/Button.astro";
         subheader="Hos vores rådgivning kan du få gode råd og inspiration til alt fra opdragelse og grænsesætning, til hvordan du som forælder eller anden pårørende tackler lavt selvværd, ensomhed, selvmordstanker, selvskade og spiseforstyrrelser. Book en samtale, så ringer vi dig op."
       />
     </div>
-    <div class="section-3-top">
-      <div class="flex-gap">
-        <h2 class="subheader">Forældrebrevkassen</h2>
-        <p>
-          I brevkassen svarer vi på alle dine spørgsmål relateret til piger og
-          unge kvinder mellem 12 og 24 år. Skriv til vores brevkasse eller læs
-          andres spørgsmål.
-        </p>
+    <div class="section-3">
+      <div class="section-3-top">
+        <div class="flex-gap">
+          <h2 class="subheader">Forældrebrevkassen</h2>
+          <p>
+            I brevkassen svarer vi på alle dine spørgsmål relateret til piger og
+            unge kvinder mellem 12 og 24 år. Skriv til vores brevkasse eller læs
+            andres spørgsmål.
+          </p>
+        </div>
+        <div class="button-container button-container-end">
+          <Button
+            text="Skriv til brevkassen"
+            style="dark"
+            size="m-small-d-large"
+          />
+        </div>
       </div>
-      <div class="button-container">
-        <Button
-          text="Skriv til brevkassen"
-          style="dark"
-          size="m-small-d-large"
-        />
+      <div class="search-container">
+        <p class="light-text searchcopy">Søg efter breve</p>
+        <SearchBar />
+      </div>
+      <div>
+        <p class="indicator">8 ud af 129</p>
+        <div class="lettercontainer">
+          <BrevkasseCard
+            header="Jeg har opdaget at min datter kaster op inden hun går i seng"
+          />
+          <BrevkasseCard
+            header="Jeg har opdaget at min datter kaster op inden hun går i seng"
+          />
+          <BrevkasseCard
+            header="Jeg har opdaget at min datter kaster op inden hun går i seng"
+          />
+          <BrevkasseCard
+            header="Jeg har opdaget at min datter kaster op inden hun går i seng"
+          />
+          <BrevkasseCard
+            header="Jeg har opdaget at min datter kaster op inden hun går i seng"
+          />
+          <BrevkasseCard
+            header="Jeg har opdaget at min datter kaster op inden hun går i seng"
+          />
+          <BrevkasseCard
+            header="Jeg har opdaget at min datter kaster op inden hun går i seng"
+          />
+          <BrevkasseCard
+            header="Jeg har opdaget at min datter kaster op inden hun går i seng"
+          />
+        </div>
+        <div class="margintop button-container">
+          <Button text="Læs flere" />
+        </div>
       </div>
     </div>
   </section>
@@ -82,9 +122,9 @@ import Button from "../components/ui/Button.astro";
   }
 
   .button-container {
-	width: 100%;
-	display: flex;
-	justify-content: center;
+    width: 100%;
+    display: flex;
+    justify-content: center;
   }
   .mobilehero {
     display: flex;
@@ -101,17 +141,44 @@ import Button from "../components/ui/Button.astro";
   }
 
   .section-3-top {
-	display: flex;
-	flex-direction: column;
-	gap: var(--spacing-small);
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-small);
   }
 
   .flex-gap {
-	display: flex;
-	flex-direction: column;
-	gap: var(--spacing-xs);
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-xs);
   }
 
+  .searchcopy {
+    color: var(--color-black-ish);
+    opacity: var(--opacity-75);
+  }
+
+  .search-container {
+    margin-top: var(--spacing-xs);
+  }
+
+  .indicator {
+    color: var(--color-black-ish);
+    opacity: var(--opacity-50);
+    margin-bottom: var(--spacing-small);
+    margin-top: var(--spacing-small);
+    text-align: center;
+  }
+  .lettercontainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: var(--spacing-small);
+    max-width: 1150px;
+  }
+
+  .margintop {
+    margin-top: var(--spacing-small);
+  }
   @media only screen and (min-width: 800px) {
     section {
       display: flex;
@@ -148,17 +215,27 @@ import Button from "../components/ui/Button.astro";
       gap: var(--spacing-large);
     }
 
-	.section-3-top {
-	flex-direction: row;
-	gap: var(--spacing-small);
-	max-width: 1050px;
+    .section-3-top {
+      flex-direction: row;
+      gap: var(--spacing-small);
+      max-width: 1050px;
+    }
+    .section-3 {
+      max-width: 1050px;
+      gap: var(--spacing-xs);
+      display: flex;
+      flex-direction: column;
+    }
 
-  }
-  .button-container {
-	width: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: end;
-  }
+    .search-container {
+      max-width: 30%;
+    }
+
+    .button-container-end {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: end;
+    }
   }
 </style>
