--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -26,6 +26,7 @@ import Button from "./Button.astro";
   <li> <a href="frivillig.html">Frivillig</a></li>
   <li> <a href="foraeldre.html">Forældre</a></li>
   <li> <a href="main.html">Pigeunivers</a></li>
+  <li> <a href="faq.html">FAQ</a></li>
  </ul>
  <ul>
   <li> <a href="main.html">Pigeunivers</a></li>
