--- a/src/pages/chat.astro
+++ b/src/pages/chat.astro
@@ -5,6 +5,7 @@ import ColorSection from "../components/ui/ColorSection.astro"
 
 ---
 <GirlsUniLayout title="Pigeunivers">
+<div class="chatlayout">
 <ColorSection color="pink" title="GirlTalks Chat" hex="#ffe4ee" text="Start anonym chat" link="/">
 	<p slot="description">
 		Du kan chatte med os hver aften i åbningstiden.
@@ -20,7 +21,7 @@ import ColorSection from "../components/ui/ColorSection.astro"
 	<p slot="description" class="bold">Søndag: kl. 18.30-22.30</p>
 
 </ColorSection>
-
+</div>
 	</GirlsUniLayout>
 
 	<style>
@@ -29,4 +30,9 @@ import ColorSection from "../components/ui/ColorSection.astro"
 		}
 		
 		.pt-20{padding-top: 20px;}
+
+		.chatlayout{
+			display: flex;
+			justify-content: center;
+		}
 	</style>
