updated the text on BrevkasseCard

--- a/src/pages/brevkasse.astro
+++ b/src/pages/brevkasse.astro
@@ -27,14 +27,14 @@ import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
     </div>
     <p class="indicator">8 ud af 129</p>
     <div class="lettercontainer">
-      <BrevkasseCard category='Skole og uddannelse' filter="skole_og_uddannelse all" header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
-      <BrevkasseCard category='Skole og uddannelse' filter="skole_og_uddannelse all" header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
-      <BrevkasseCard category='Venskaber og familie' filter="venskaber_og_familie all" header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
-      <BrevkasseCard category='Krop og sex' filter="krop_og_sex all" header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
-      <BrevkasseCard category='Selvværd' filter="selvværd" header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
-      <BrevkasseCard category='Trivsel' filter="trivsel all" header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
-      <BrevkasseCard category='Kærlighed' filter="kærlighed all" header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
-      <BrevkasseCard category='Andet' filter="andet all" header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
+      <BrevkasseCard category='Skole og uddannelse' filter="skole_og_uddannelse all" header="Jeg er tiltrukket af piger,  selvom jeg er til drenge" />
+      <BrevkasseCard category='Skole og uddannelse' filter="skole_og_uddannelse all" header="Jeg er tiltrukket af piger,  selvom jeg er til drenge" />
+      <BrevkasseCard category='Venskaber og familie' filter="venskaber_og_familie all" header="Jeg er tiltrukket af piger,  selvom jeg er til drenge" />
+      <BrevkasseCard category='Krop og sex' filter="krop_og_sex all" header="Jeg er tiltrukket af piger,  selvom jeg er til drenge" />
+      <BrevkasseCard category='Selvværd' filter="selvværd" header="Jeg er tiltrukket af piger,  selvom jeg er til drenge" />
+      <BrevkasseCard category='Trivsel' filter="trivsel all" header="Jeg er tiltrukket af piger,  selvom jeg er til drenge" />
+      <BrevkasseCard category='Kærlighed' filter="kærlighed all" header="Jeg er tiltrukket af piger,  selvom jeg er til drenge" />
+      <BrevkasseCard category='Andet' filter="andet all" header="Jeg er tiltrukket af piger,  selvom jeg er til drenge" />
     </div>
     <div class="margintop"><Button text="Læs flere"></Button></div>
   </div>
