added more brevkasseCards on brevkasse

--- a/src/pages/brevkasse.astro
+++ b/src/pages/brevkasse.astro
@@ -35,6 +35,10 @@ import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
       <BrevkasseCard category='Trivsel' filter="trivsel all" header="Jeg er tiltrukket af piger,  selvom jeg er til drenge" />
       <BrevkasseCard category='Kærlighed' filter="kærlighed all" header="Jeg er tiltrukket af piger,  selvom jeg er til drenge" />
       <BrevkasseCard category='Andet' filter="andet all" header="Jeg er tiltrukket af piger,  selvom jeg er til drenge" />
+      <BrevkasseCard category='Trivsel' filter="trivsel all" header="Jeg er tiltrukket af piger,  selvom jeg er til drenge" />
+      <BrevkasseCard category='Kærlighed' filter="kærlighed all" header="Jeg er tiltrukket af piger,  selvom jeg er til drenge" />
+      <BrevkasseCard category='Andet' filter="andet all" header="Jeg er tiltrukket af piger,  selvom jeg er til drenge" />
+      <BrevkasseCard category='Kærlighed' filter="kærlighed all" header="Jeg er tiltrukket af piger,  selvom jeg er til drenge" />
     </div>
     <div class="margintop"><Button text="Læs flere"></Button></div>
   </div>
