fixed the headline

--- a/src/components/ui/ColorSection.astro
+++ b/src/components/ui/ColorSection.astro
@@ -82,6 +82,7 @@ const { extraInfo, link, text, size = "m-small-d-large" } = Astro.props;
 
 
 
+
   @media only screen and (min-width: 600px) {
     .ColorSection {
   margin-bottom: var(--spacing-2xl);
@@ -98,6 +99,10 @@ const { extraInfo, link, text, size = "m-small-d-large" } = Astro.props;
   .button-wrapper {
     max-width: 1000px;
     justify-content: flex-end;
+  }
+
+  .headline{
+   white-space: nowrap;
   }
 }
 
