--- a/src/pages/chat.astro
+++ b/src/pages/chat.astro
@@ -7,6 +7,9 @@ import ColorSection from "../components/ui/ColorSection.astro"
 <GirlsUniLayout title="Pigeunivers">
 <div class="chatlayout">
 <ColorSection color="pink" title="GirlTalks Chat" hex="#ffe4ee" text="Start anonym chat" link="/">
+	<div slot="circle">
+		<p>hello</p>
+	</div>
 	<p slot="description">
 		Du kan chatte med os hver aften i åbningstiden.
 	</p>
@@ -36,4 +39,9 @@ import ColorSection from "../components/ui/ColorSection.astro"
 			justify-content: center;
 		}
 
+		.headline{
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+		}
 	</style>
