--- a/src/components/ui/ColorSection.astro
+++ b/src/components/ui/ColorSection.astro
@@ -110,6 +110,7 @@ const { extraInfo, link, text, size = "m-small-d-large" } = Astro.props;
 
   .titleclass{
     display: flex;
+    align-items: center;
   }
 
 }
