logo added girls page

--- a/src/components/ui/NavSecondary.astro
+++ b/src/components/ui/NavSecondary.astro
@@ -42,6 +42,7 @@ const navLinks = [{
 </nav>
 
 <div class="NavPrimaryMobile"> 
+  <div class="mobilelogo"><img class="pigelogo" src="images/Pigeunivers_logo.png" alt=""></a></div>
     <input id="toggle" type="checkbox"></input>
 
     <label for="toggle" class="hamburger">
@@ -273,9 +274,22 @@ margin-left: auto;
   font-weight:bolder; 
 }
 
+.mobilelogo{
+position: absolute;
+top: 2.7em;
+left: 2em;
+margin: auto;
+width: 200px;
+}
+
+.mobilelogo img{
+  width: 100%;
+}
+
 /*LAST LINK*/
 .last-mobile-link{
     padding-top: 40px;
+    font-weight: bolder;
 }
 
 
