--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -14,7 +14,9 @@ import Button from "./Button.astro";
       <label class="themeheader" for="email">Din E-mail</label>
       <input type="email" id="email" name="email" class="dark" />
     </div>
+    <div class="button-wrapper">
     <Button size="extra-small" text="Tilmeld dig" />
+  </div>
   </form>
 </div> 
 </section> 
@@ -133,6 +135,10 @@ justify-content: space-between;
 
 .pl20{
   padding-left: 20px;
+}
+
+.button-wrapper{
+  display:flex;
 }
 
 footer div{
