nav color fixed

--- a/src/components/ui/NavSecondary.astro
+++ b/src/components/ui/NavSecondary.astro
@@ -109,8 +109,8 @@ justify-content: center;
 .NavPrimary{
     display:grid;
     grid-template-rows: 1fr 1fr;
-background-color: var(--color-pink);
-box-shadow: 0 3px 10px rgb(255 228 238 / 0.50)
+background-color: #FDEFF4;
+box-shadow: 0 3px 10px rgb(255 228 238 / 0.50);
 
 }
 
@@ -233,7 +233,7 @@ margin-left: auto;
   position: fixed;
   width: 100%;
   height: 100%;
-  background-color: var(--color-pink);
+  background-color: #FDEFF4;
   top: -100%; left: 0; right: 0; bottom: 0;
   overflow: hidden;
   transition: all 0.3s ease-in-out;
