added hover to the images

--- a/src/pages/medier.astro
+++ b/src/pages/medier.astro
@@ -26,7 +26,7 @@ import Dropdown from "../components/ui/Dropdown.astro"
 	</section>
 </div>
 <div class="medier-podcast-section">
-	<img src="images/articleimages/podcastimage.jpg" alt="podcastimage">
+	<a href="#"><img src="images/articleimages/podcastimage.jpg" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber"></a>
 	</div>
 <div class="medier-second-section">
 	<h2 class="sub-header-underlined">Tema: Venskaber og Familie</h2>
@@ -41,7 +41,7 @@ import Dropdown from "../components/ui/Dropdown.astro"
 	</div>
 </div>
 <div class="medier-podcast-section">
-<img src="images/articleimages/podcastimage.jpg" alt="podcastimage">
+<a href="#"><img src="images/articleimages/podcastimage.jpg" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber"></a>
 </div>
 <div class="medier-fourth-section">
 	<h2 class="sub-header-underlined">Tema: Venskaber og Familie</h2>
@@ -82,6 +82,12 @@ import Dropdown from "../components/ui/Dropdown.astro"
 .filter-div{
 	padding-bottom: 40px;
 }
+
+a:hover {
+	scale: 1.05;
+}
+
+
 /*FIRST SECTION*/ 		
 		.medier-first-section{
 			display: grid
