specified hover to this page only

--- a/src/pages/medier.astro
+++ b/src/pages/medier.astro
@@ -83,7 +83,7 @@ import Dropdown from "../components/ui/Dropdown.astro"
 	padding-bottom: 40px;
 }
 
-a:hover {
+.medierlayout a:hover {
 	scale: 1.05;
 }
 
