corrected colorsection to boccolorbutton

--- a/src/components/ui/BoxColorButton.astro
+++ b/src/components/ui/BoxColorButton.astro
@@ -1,12 +1,12 @@
 ---
 import Button from "../ui/Button.astro";
-const { color, subheader, text, title, link, size, } = Astro.props;
+const { color, description, text, title, link, size, } = Astro.props;
 ---
 
 <section class:list={["BoxColor", color]}>
     <div class="text-container">
   <h2 class="title secondary-header">{title}</h2>
-  <slot class="description"></slot>
+  <slot name="description"></slot>
 
 
 </div>
