--- a/src/pages/foraeldre.astro
+++ b/src/pages/foraeldre.astro
@@ -51,9 +51,10 @@ import BrevkasseCard from "../components/cards/BrevkasseCard.astro";
         title="Telefonrådgivning"
         text="book rådgivning"
         style="dark"
-        size="m-small-d-large"
-        subheader="Hos vores rådgivning kan du få gode råd og inspiration til alt fra opdragelse og grænsesætning, til hvordan du som forælder eller anden pårørende tackler lavt selvværd, ensomhed, selvmordstanker, selvskade og spiseforstyrrelser. Book en samtale, så ringer vi dig op."
-      />
+        size="m-small-d-large">
+      <p slot="description">
+        Hos vores rådgivning kan du få gode råd og inspiration til alt fra opdragelse og grænsesætning, til hvordan du som forælder eller anden pårørende tackler lavt selvværd, ensomhed, selvmordstanker, selvskade og spiseforstyrrelser.</p>
+      <p slot="description"> Book en samtale, så ringer vi dig op.</p></BoxColorButton>
     </div>
     <div class="section-3">
       <div class="section-3-top">
