corrected slot on both front pages as well

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,9 @@ import BoxColorButton from "../components/ui/BoxColorButton.astro"
 <img src="images/heroimages/fpimg.png" alt="Image with text.">
 	</section>
 <div class="BoxColorButtonCenter">
-	<BoxColorButton size="m-extra-small-d-medium" subheader="Vi sidder klar til at hjælpe dig" title="Har du tanker, der fylder?" color="purple" text="Start anonym chat"/>
+<BoxColorButton size="m-extra-small-d-medium"  title="Har du tanker, der fylder?" color="purple" text="Start anonym chat">
+	<p slot="description">Vi sidder klar til at hjælpe dig</p>
+</BoxColorButton>
 </div>	
 <div class="medier-second-section">
 	<h2 class="sub-header-underlined">Tema: Venskaber og Familie</h2>
