--- a/src/pages/main.astro
+++ b/src/pages/main.astro
@@ -31,7 +31,9 @@ import Button from "../components/ui/Button.astro";
 <Button size="m-extra-small-d-medium" text="Gå til fællesskaber"></Button></div>
 </div>
 <div class="BoxColorButtonCenter">
-<BoxColorButton size="m-extra-small-d-medium" color="purple" title="Du er aldrig alene med dine tanker" subheader="Har du nogle tanker, du har brug for at få ud af hovedet, så de fylder mindre?" text="Skriv til brevkassen"></BoxColorButton>
+<BoxColorButton size="m-extra-small-d-medium" color="purple" title="Du er aldrig alene med dine tanker"  text="Skriv til brevkassen">
+	<p slot="description">Har du nogle tanker, du har brug for at få ud af hovedet, så de fylder mindre?</p>
+</BoxColorButton>
 </div>
 </div>
 	</GirlsUniLayout>
