added links to brevkasse

--- a/src/pages/brevkasse.astro
+++ b/src/pages/brevkasse.astro
@@ -10,7 +10,7 @@ import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
 
 <GirlsUniLayout title="Brevkasse">
   <div class="brevkasselayout">
-    <ColorSection color="pink" hex="#ffe4ee" title="GirlTalk's brevkasse" text="Skriv et brev" link="/">
+    <ColorSection color="pink" hex="#ffe4ee" title="GirlTalk's brevkasse" text="Skriv et brev" link="https://jpmpz0xim6i.typeform.com/to/pFHo1ZT6">
       <div slot="description" class="text-in-component">
       <p slot="description" class="themeheader">Har du nogle tanker, du har brug for at få ud af hovedet, så de fylder mindre?</p>
       <p slot="description">Del dem med os her eller læs andre pigers spørgsmål, følelser og oplevelser.</p>
