--- a/src/pages/foraeldre.astro
+++ b/src/pages/foraeldre.astro
@@ -71,6 +71,7 @@ import BrevkasseCard from "../components/cards/BrevkasseCard.astro";
             text="Skriv til brevkassen"
             style="dark"
             size="m-small-d-large"
+            link="https://jpmpz0xim6i.typeform.com/to/JjBBzzKN"
           />
         </div>
       </div>
